[package]
name = "api_search"
version = "0.1.0"
edition = "2021"
publish = false

# Search HTTP API — axum router + utoipa OpenAPI docs covering fuzzy file
# search and symbol lookup. Composed into the main app's combined
# `axum::Router` at startup rather than running its own listener. Pure leaf
# crate: depends on the underlying `search` engine crate but has no back-edge
# into `app`.

[lib]
name = "api_search"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }

# Underlying search engine
search = { path = "../search" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
