[package]
name = "code_map"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "ORGII Code Map: workspace symbol and relationship index for agent tools and UI."
publish = false

[lib]
name = "code_map"
path = "src/lib.rs"

[dependencies]
app_paths = { path = "../app-paths" }
search = { path = "../search" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
ignore = "0.4"
regex = "1.9.5"
sha2 = "0.10"
hex = "0.4"
chrono = { workspace = true }
parking_lot = "0.12"
once_cell = "1.19"
tree-sitter = "0.24"

[dev-dependencies]
tempfile = "3.13"
