[package]
name = "container"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Local Docker container inspection and lifecycle commands for Launchpad."
publish = false

[lib]
name = "container"
path = "src/lib.rs"

[dependencies]
app_platform = { path = "../app-platform" }
tauri = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
bollard = "0.21.0"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
