[package]
name = "cursor_bridge_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Tauri-side wrapper for the cursor_bridge library: command handlers, isolated probe-instance lifecycle, state.vscdb diffing."
publish = false

[lib]
name = "cursor_bridge_app"
path = "src/lib.rs"

# Mirrors `crates/key-vault` and `crates/git`: the crate keeps its
# `#[tauri::command]` macros so the `app` crate just re-registers them in
# `commands/handler_list.inc`. The underlying CDP transport + DOM helpers live
# in the sibling `cursor_bridge` library crate which this crate wraps.
[dependencies]
cursor_bridge = { path = "../cursor-bridge" }
app_platform = { path = "../app-platform" }

# Tauri command macro surface. Feature set kept identical to the root `app`
# crate so cargo unifies features across the workspace.
tauri = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1"

# `lifecycle::ensure_running` and `commands::cursor_bridge_list_models`
# build their own short-timeout reqwest clients to probe the CDP HTTP target
# discovery endpoint (`/json/list`).
reqwest = { workspace = true }
# `vscdb_models` opens Cursor's `state.vscdb` files in read-only mode
# to seed the model/mode pickers from disk when CDP isn't reachable.
# Bundled SQLite to match the rest of the workspace.
rusqlite = { workspace = true }
# `lifecycle::detect_cursor_mode` walks the process table to decide whether
# the user already has a real Cursor running so we can avoid spawning a
# duplicate probe instance.
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
