[package]
name = "cursor_bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Drive a running Cursor.app via the Chrome DevTools Protocol (extension-host inspector). Phase 1: probe binary only."
publish = false

[lib]
name = "cursor_bridge"
path = "src/lib.rs"

# Standalone CDP probe — used to validate the composer/aichat command
# surface against a running Cursor before wiring anything into the main
# Tauri app. Run with:
#   cargo run -p cursor_bridge --bin cursor-bridge-probe -- list-targets
[[bin]]
name = "cursor-bridge-probe"
path = "src/bin/probe.rs"

[dependencies]
# Async runtime — we use a single-threaded current_thread runtime in the
# probe binary to keep the dep surface small. The lib itself is runtime
# agnostic (it just needs whatever the caller provides).
tokio = { workspace = true }
# CDP transport. Inspector serves at `ws://127.0.0.1:<port>/<uuid>` —
# plain ws://, no TLS — so we explicitly disable the TLS feature stack.
tokio-tungstenite = { workspace = true }

# HTTP client for the `/json/list` discovery endpoint. We use the
# blocking flavor inside an `tokio::task::spawn_blocking` from the lib
# to avoid pulling reqwest's full async stack into our public API; the
# probe binary uses the async client directly.
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = { workspace = true }
anyhow = "1.0"

# CLI parser — only used by the probe binary, but Cargo doesn't let us
# scope a dep to a single bin without features, so it leaks into the lib
# build. The probe is the entire point of the crate today, so this is
# acceptable.
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures combinators for the WS read/write split in the CDP client.
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
