[package]
name = "mobile_remote"
version = "0.1.0"
edition = "2021"
publish = false

# Mobile Remote Control — desktop-side bridge to the ORGII mobile relay.
# Connect-with-reconnect WS client, RPC dispatch, pairing flow,
# allowlist + audit. Pure leaf — the `DispatchHost` trait is the
# integration point; `app::lib.rs` plugs the production `TauriDispatchHost`
# impl in via `BridgeSupervisor::set_host_factory` at boot. Owns pairing
# `#[tauri::command]`s, re-registered from `commands/handler_list.inc`
# via bare `mobile_remote::…` paths.

[lib]
name = "mobile_remote"
path = "src/lib.rs"

[dependencies]
# Tauri runtime — used by the `#[tauri::command]` entry points exposed under `pairing::commands`.
tauri = { workspace = true }

# Workspace crates
app_paths = { path = "../app-paths" }
orgii_protocol = { path = "../orgii-protocol" }

# Async runtime + WS
async-trait = "0.1"
futures-util = "0.3"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

# HTTP for pairing + audit POSTs
reqwest = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = { workspace = true }

# Logging
tracing = "0.1"

# Pairing-code crypto helpers
hex = "0.4"
rand = { workspace = true }
sha2 = "0.10"

# Misc
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
tracing-subscriber = "0.3"
wiremock = "0.6"
